esphome/01-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: esphome
  labels:
    app.kubernetes.io/name: esphome
    app.kubernetes.io/instance: esphome
