esphome/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: esphome-service
  app.kubernetes.io/name: esphome-service
  namespace: esphome
spec:
  type: ClusterIP
  ports:
  - port: 6052
    protocol: TCP
    targetPort: 6052
    name: web
  selector:
    app: esphome
