esphome/ingress.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  app.kubernetes.io/name: esphome
  namespace: esphome
spec:
  entryPoints: 
    - websecure
  routes:
  - match: Host(`esphome.ucdialplans.com`) 
    kind: Rule
    services:
    - name: esphome-service
      port: 6052
    middlewares:
    - name: traefik-security
      namespace: traefik
  tls:
    secretName: traefik-wildcard-cert
    options:
      name: tls-options-clientauth
      namespace: traefik
